trying to fix alignment in mobile

--- a/src/assets/styles/detail-form.css
+++ b/src/assets/styles/detail-form.css
@@ -474,7 +474,7 @@ div.switch > input:checked + label::after {
     }
 
     div.input-form {
-        width: 450px;
+        width: 100%;
         height: 580px;
         margin-left: 0;
         margin-top: 65px;
